--- a/app/src/main/res/layout/activity_player_track.xml
+++ b/app/src/main/res/layout/activity_player_track.xml
@@ -63,7 +63,7 @@
         android:ellipsize="end"
         android:layout_marginBottom="30dp"
         app:layout_constraintStart_toStartOf="@id/player_add_button"
-        app:layout_constraintBottom_toTopOf="@id/player_button_play"/>
+        app:layout_constraintBottom_toTopOf="@id/player_button_play_and_pause"/>
 
     <ImageButton
         android:id="@+id/player_add_button"
@@ -71,19 +71,20 @@
         android:src="@drawable/add"
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toStartOf="@id/player_leftBorder"
-        app:layout_constraintTop_toTopOf="@id/player_button_play"
-        app:layout_constraintBottom_toBottomOf="@id/player_button_play"/>
+        app:layout_constraintTop_toTopOf="@id/player_button_play_and_pause"
+        app:layout_constraintBottom_toBottomOf="@id/player_button_play_and_pause"/>
 
     <ImageButton
-        android:id="@+id/player_button_play"
+        android:id="@+id/player_button_play_and_pause"
         android:layout_width="83dp"
         android:layout_height="83dp"
         android:layout_marginBottom="5dp"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
-        android:background="@drawable/baseline_play_circle_24"
+        android:background="@drawable/player_media_player_button"
         app:layout_constraintBottom_toTopOf="@id/player_track_time"
         app:layout_constraintStart_toStartOf="@id/player_leftBorder"
-        app:layout_constraintEnd_toStartOf="@id/player_rightBorder"/>
+        app:layout_constraintEnd_toStartOf="@id/player_rightBorder"
+        />
 
     <TextView
         android:id="@+id/player_track_time"
@@ -102,8 +103,8 @@
         android:src="@drawable/like"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toStartOf="@id/player_rightBorder"
-        app:layout_constraintTop_toTopOf="@id/player_button_play"
-        app:layout_constraintBottom_toBottomOf="@id/player_button_play"/>
+        app:layout_constraintTop_toTopOf="@id/player_button_play_and_pause"
+        app:layout_constraintBottom_toBottomOf="@id/player_button_play_and_pause"/>
 
     <TextView
         android:id="@+id/player_track_duration_title"
