--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -40,7 +40,6 @@
             android:id="@+id/search_edit_text"
             style="@style/search_edit_text_style"
             android:hint="@string/search"
-            android:imeOptions="actionDone"
             android:inputType="text"
             android:maxLines="1"
             android:singleLine="true" />
@@ -60,6 +59,71 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal">
+
+
+
+
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <LinearLayout
+            android:id="@+id/search_story_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+
+
+
+            <TextView
+                style="@style/search_placeholder_text"
+                android:text="@string/search_history_text"/>
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/search_story_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingHorizontal="2dp"
+                android:paddingTop="26dp"
+                tools:listitem="@layout/item_track" />
+
+
+            <Button
+                android:id="@+id/clear_story_button"
+                style="@style/refresh_button"
+                android:fontFamily="@font/ys_display_medium"
+                android:text="@string/clear_history_button"
+                android:textAllCaps="false"
+                android:textSize="14sp"
+                app:cornerRadius="20sp" />
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/search_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingHorizontal="2dp"
+            android:paddingTop="5dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_track" />
+
+        <ProgressBar
+            android:id="@+id/searching_progress_bar"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:layout_marginTop="148dp"
+            android:layout_gravity="center_horizontal"
+            android:indeterminateTint="@color/progress_bar_color"
+            android:visibility="gone"/>
 
         <LinearLayout
             android:id="@+id/placeholder_trackList"
@@ -91,59 +155,6 @@
 
 
         </LinearLayout>
-
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        <LinearLayout
-            android:id="@+id/search_story_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:orientation="vertical"
-            android:visibility="gone">
-
-
-            <TextView
-                style="@style/search_placeholder_text"
-                android:text="@string/search_history_text"/>
-
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/search_story_recycler"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:paddingHorizontal="2dp"
-                android:paddingTop="26dp"
-                tools:listitem="@layout/item_track" />
-
-
-            <Button
-                android:id="@+id/clear_story_button"
-                style="@style/refresh_button"
-                android:fontFamily="@font/ys_display_medium"
-                android:text="@string/clear_history_button"
-                android:textAllCaps="false"
-                android:textSize="14sp"
-                app:cornerRadius="20sp" />
-
-
-
-
-        </LinearLayout>
-
-    </androidx.core.widget.NestedScrollView>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/search_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingHorizontal="2dp"
-            android:paddingTop="5dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/item_track" />
 
     </FrameLayout>
 
