--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="almostBlack">#1A1B22</color>
     <color name="gray">#AEAFB4</color>
-    <color name="blue_for_background">#3772e7</color>
+    <color name="light_blue">#3772e7</color>
     <color name="light_gray">#E6E8Eb</color>
+    <color name="progress_bar_color">#6200EE</color>
 </resources>
