--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,7 +25,7 @@
     </style>
 
     <style name="main_menu_background">
-        <item name="android:background">@color/blue_for_background</item>
+        <item name="android:background">@color/light_blue</item>
     </style>
 
     <style name="default_menu_background">
@@ -150,6 +150,4 @@
         <item name="android:layout_height">51dp</item>
         <item name="android:background">@drawable/player_gray_button</item>
     </style>
-
-
 </resources>
